--- a/index.html
+++ b/index.html
@@ -403,7 +403,23 @@
       </div>
     </div>
 
-    <!-- Image Modal -->
+    <section id="feedback" style="margin-top: 60px;">
+      <h4 style="font-size: 20px; text-align: center; margin-bottom: 20px;">
+        Project Feedback
+      </h4>
+      <p style="text-align: center; color: #ccc; margin-bottom: 15px; font-size: 14px;">
+        I'd love to hear your thoughts on my projects. Please leave feedback below!
+      </p>
+      <div style="display: flex; justify-content: center;">
+        <iframe 
+          src="https://forms.gle/TET6j2VA92uFNWcG8" 
+          width="100%" 
+          height="600" 
+          style="max-width: 800px; border: none; border-radius: 8px; background: #fff;">
+        </iframe>
+      </div>
+    </section>
+
     <div id="imageModal" class="modal">
       <span class="modal-close" onclick="closeModal()">&times;</span>
       <img class="modal-content" id="modalImage">
