--- a/index.html
+++ b/index.html
@@ -398,7 +398,9 @@
         <h5>Codem Sidebar</h5>
         <p>A side assistant to keep on your screen that controls your cursor and performs tasks set by the user.</p>
         <div class="project-links">
-          <a href="https://www.mediafire.com/file/hszu3i4p6oz4i59/sidebar_app.exe/file" target="_blank">Download</a>
+          <a href="https://www.mediafire.com/file/hszu3i4p6oz4i59/sidebar_app.exe/file" target="_blank">Download V1</a>
+          <br>
+          <a href="https://www.mediafire.com/file/74vidrkruvq063u/sidebar_app.exe/file" target="_blank">Download V2</a>
         </div>
       </div>
     </div>
@@ -463,3 +465,4 @@
   </script>
 </body>
 </html>
+
