--- a/index.html
+++ b/index.html
@@ -403,6 +403,17 @@
           <a href="https://www.mediafire.com/file/74vidrkruvq063u/sidebar_app.exe/file" target="_blank">Download V2</a>
         </div>
       </div>
+      
+      <div class="project-card">
+        <div class="project-image-container" onclick="openModal('Codem_Assistant.png', 'Codem Assistant')">
+          <img src="Codem_Assistant.png" alt="Codem Assistant">
+        </div>
+        <h5>Codem Assistant</h5>
+        <p>A friendly desktop companion that helps you stay organized with reminders, timers, and calendar events.</p>
+        <div class="project-links">
+          <a href="https://www.mediafire.com/file/qjb7jsukg5bs4o2/Assistant.zip/file" target="_blank">Download V1</a>
+        </div>
+      </div>
     </div>
 
     <section id="feedback" style="margin-top: 60px;">
@@ -465,4 +476,3 @@
   </script>
 </body>
 </html>
-
