--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         </div>
       </div>
       <div class="about-stats">
-        <div class="stat"><strong>15+</strong> Projects</div>
+        <div class="stat"><strong>16+</strong> Projects</div>
         <div class="stat"><strong>4</strong> Companies used</div>
         <div class="stat"><strong>8+</strong> Years of experience</div>
       </div>
@@ -361,6 +361,18 @@
 
     <h4 class="projects-title" id="projects">Projects</h4>
     <div class="projects-grid">
+      <!-- Codem Study Hub Project - Added as first item -->
+      <div class="project-card">
+        <div class="project-image-container" onclick="openModal('Codem_hub.png', 'Codem Study Hub')">
+          <img src="Codem_hub.png" alt="Codem Study Hub">
+        </div>
+        <h5>Codem Study Hub</h5>
+        <p>An interactive learning platform featuring smart flashcards with spaced repetition, downloadable filtered revision notes, and comprehensive study tools.</p>
+        <div class="project-links">
+          <a href="https://codem-studyset.vercel.app" target="_blank">codem-studyset.vercel.app</a>
+        </div>
+      </div>
+      
       <div class="project-card">
         <div class="project-image-container" onclick="openModal('Ujalagame.png', 'Ujala Educational Games')">
           <img src="Ujalagame.png" alt="Scratch and Python games for Ujala">
