--- a/resume.html
+++ b/resume.html
@@ -172,8 +172,8 @@
       <div class="sidebar-section">
         <h2>Contact</h2>
         <ul>
-          <li>📞 +000-000-0000</li>
-          <li>✉️ thisisntarealemail@gmail.com</li>
+          <li>📞 +03000140949</li>
+          <li>✉️ muhammad.ashaji1@gmail.com</li>
           <li>📍 Nixor College</li>
         </ul>
       </div>
@@ -254,3 +254,4 @@
 
 </body>
 </html>
+
