--- a/index.html
+++ b/index.html
@@ -413,6 +413,8 @@
           <a href="https://www.mediafire.com/file/hszu3i4p6oz4i59/sidebar_app.exe/file" target="_blank">Download V1</a>
           <br>
           <a href="https://www.mediafire.com/file/74vidrkruvq063u/sidebar_app.exe/file" target="_blank">Download V2</a>
+          <br>
+          <a href="https://www.mediafire.com/file/kiblf5b8nn7ows6/sidebar_app.zip/file" target="_blank">Download V3</a>
         </div>
       </div>
       
@@ -488,3 +490,4 @@
   </script>
 </body>
 </html>
+
