--- a/index.html
+++ b/index.html
@@ -373,6 +373,18 @@
         </div>
       </div>
       
+      <!-- NEW: Codem Web Capture Project -->
+      <div class="project-card">
+        <div class="project-image-container" onclick="openModal('web_capture.png', 'Codem Web Capture')">
+          <img src="web_capture.png" alt="Codem Web Capture">
+        </div>
+        <h5>Codem Web Capture</h5>
+        <p>An easy-to-use tool for capturing websites as PNG images with customizable settings.</p>
+        <div class="project-links">
+          <a href="https://www.mediafire.com/file/wmcd68921gyj9ip/Codem-Web-Capture.zip/file" target="_blank">Download V1</a>
+        </div>
+      </div>
+      
       <div class="project-card">
         <div class="project-image-container" onclick="openModal('Ujalagame.png', 'Ujala Educational Games')">
           <img src="Ujalagame.png" alt="Scratch and Python games for Ujala">
@@ -490,4 +502,3 @@
   </script>
 </body>
 </html>
-
