--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
           <img src="web_capture.png" alt="Codem Web Capture">
         </div>
         <h5>Codem Web Capture</h5>
-        <p>An easy-to-use tool for capturing websites as PNG images with customizable settings.</p>
+        <p>An easy-to-use tool(Browser Extension) for capturing websites as PNG images with customizable settings.</p>
         <div class="project-links">
           <a href="https://www.mediafire.com/file/wmcd68921gyj9ip/Codem-Web-Capture.zip/file" target="_blank">Download V1</a>
         </div>
@@ -502,3 +502,4 @@
   </script>
 </body>
 </html>
+
