--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         </div>
       </div>
       <div class="about-stats">
-        <div class="stat"><strong>16+</strong> Projects</div>
+        <div class="stat"><strong>17+</strong> Projects</div>
         <div class="stat"><strong>4</strong> Companies used</div>
         <div class="stat"><strong>8+</strong> Years of experience</div>
       </div>
@@ -382,6 +382,20 @@
         <p>An easy-to-use tool(Browser Extension) for capturing websites as PNG images with customizable settings.</p>
         <div class="project-links">
           <a href="https://www.mediafire.com/file/wmcd68921gyj9ip/Codem-Web-Capture.zip/file" target="_blank">Download V1</a>
+        </div>
+      </div>
+      
+      <!-- NEW: Codem Virtual Mousepad Project -->
+      <div class="project-card">
+        <div class="project-image-container" onclick="openModal('Mousepad.png', 'Codem Virtual Mousepad')">
+          <img src="Mousepad.png" alt="Codem Virtual Mousepad">
+        </div>
+        <h5>Codem Virtual Mousepad</h5>
+        <p>Bring your mousepad to life by using your hands to control it using the force. A gesture-based mouse control system.</p>
+        <div class="project-links">
+          <a href="https://github.com/codemdragon/Mouse.git" target="_blank">GitHub Repository</a>
+          <br>
+          <a href="https://github.com/codemdragon/Mouse.git" target="_blank">Download V1</a>
         </div>
       </div>
       
@@ -502,4 +516,3 @@
   </script>
 </body>
 </html>
-
