--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
           <img src="Sidebar.png" alt="Codem Sidebar">
         </div>
         <h5>Codem Sidebar</h5>
-        <p>A side assistant to keep on your screen that controls your cursor and performs tasks set by the user.</p>
+        <p>A side assistant to keep on your screen that controls your cursor and performs tasks set by the user. V1 is the basic version, V2 Adds a searchbar and Profiles, V3 Adds Gradients stretch, V4 removes the ctrl and shift delay bug</p>
         
         <!-- Version Dropdown -->
         <div class="version-dropdown">
@@ -568,3 +568,4 @@
   </script>
 </body>
 </html>
+
