--- a/index.html
+++ b/index.html
@@ -445,11 +445,12 @@
         <h5>Codem's Convertor</h5>
         <p>An epic tool to convert your Music and vids over from yt. With the addition of an in app music tester. You'll need ffmpeg - grab it straight from the link in settings or download from https://www.ffmpeg.org/download.html</p>
         
-        <!-- Version Dropdown -->
+        <!-- Version Dropdown - Updated to include V3 -->
         <div class="version-dropdown">
           <select id="convertorVersion">
             <option value="http://www.mediafire.com/file/0qtet8h4v39hlkn/Codem%27s_Convertor.zip">Version 1</option>
             <option value="https://www.mediafire.com/file/4fi59ty63anx2ub/Codem's+ConvertorV2.zip/file">Version 2</option>
+            <option value="https://www.mediafire.com/file/ihcu7sghlz7omy8/CodemMusicPlayerV3.zip/file">Version 3</option>
           </select>
           <button onclick="downloadSelectedConvertorVersion()">Download Selected Version</button>
         </div>
