--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
           <img src="Ytdwn.png" alt="Codem's Convertor">
         </div>
         <h5>Codem's Convertor</h5>
-        <p>An epic tool to convert your Music and vids over from yt. With the addition of an in app music tester. You'll need ffmpeg - grab it straight from the link in settings or download from https://www.ffmpeg.org/download.html</p>
+        <p>An epic tool to convert your Music and vids over from yt. With the addition of an in app music tester. You'll need ffmpeg - grab it straight from the link in settings or download from https://www.ffmpeg.org/download.html, V1=Music Player+Music Downloader+Video Downloader, V2=Loops,Logo Spins, V3=Playlists+Thumbnail+Otherfile conversions </p>
         
         <!-- Version Dropdown - Updated to include V3 -->
         <div class="version-dropdown">
@@ -596,3 +596,4 @@
   </script>
 </body>
 </html>
+
