--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
+        <a href="blog.html">Blog</a>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSf8o3cM1baH40anmnJnV59sqxFKGopheZKdpmvo6ffHB0XTSQ/viewform?usp=sharing&ouid=107593917456147368526" target="_blank">Contact</a>
       </nav>
     </header>
@@ -596,4 +597,5 @@
   </script>
 </body>
 </html>
+
 
