--- a/sidebar.html
+++ b/sidebar.html
@@ -752,9 +752,8 @@
                     <div class="download-card latest">
                         <div class="download-badge">Latest Version</div>
                         <h3>Version 5</h3>
-                        <p>Latest release with API integration</p>
-                        <p style="color: var(--accent); margin: 10px 0;">Coming Soon</p>
-                        <a href="#" class="cta-button" style="pointer-events: none; opacity: 0.7;">Download</a>
+                        <p>Latest release with API integration and external app support</p>
+                        <a href="https://www.mediafire.com/file/i50oyv4ymbfk9if/CodemSidebar_Installer.exe/file" class="cta-button" target="_blank">Download V5</a>
                     </div>
                     <div class="download-card">
                         <h3>Version 4</h3>
