--- a/sidebar.html
+++ b/sidebar.html
@@ -680,7 +680,7 @@
             <h1>CODEM SIDEBAR</h1>
             <p>A lightweight, customizable productivity sidebar for Windows, Linux, and macOS — built to launch tools, automate tasks, and integrate with other apps via a local secure API.</p>
             <div class="hero-buttons">
-                <a href="#downloads" class="cta-button">Download Latest (V5)</a>
+                <a href="#downloads" class="cta-button">Download Latest (V6)</a>
                 <a href="#features" class="cta-button secondary-button">Learn More</a>
             </div>
         </div>
@@ -736,6 +736,14 @@
                     <h3>External Integration</h3>
                     <p>Other apps can trigger sidebar actions with the included sidebar_client.py.</p>
                 </div>
+                <!-- Add this right after the existing 6 feature cards in the Features section -->
+                <div class="feature-card fade-in">
+                    <div class="feature-icon">
+                        <i class="fas fa-arrows-alt"></i>
+                    </div>
+                    <h3>Relative Mouse Controls</h3>
+                    <p>Move and click relative to current position with adjustable speed for precise automation.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -751,6 +759,12 @@
                 <div class="downloads-grid">
                     <div class="download-card latest">
                         <div class="download-badge">Latest Version</div>
+                        <h3>Version 6</h3>
+                        <p>Enhanced mouse controls with relative movement and click-here actions</p>
+                        <a href="#" class="cta-button" target="_blank">Download V6</a>
+                    </div>
+                    <div class="download-card">
+                        <div class="download-badge">Version 5</div>
                         <h3>Version 5</h3>
                         <p>Latest release with API integration and external app support</p>
                         <a href="https://www.mediafire.com/file/i50oyv4ymbfk9if/CodemSidebar_Installer.exe/file" class="cta-button" target="_blank">Download V5</a>
@@ -1055,6 +1069,19 @@
                         <li>External app integration</li>
                         <li>sidebar_client.py</li>
                         <li>RESTful endpoints</li>
+                    </ul>
+                </div>
+                <div class="feature-card fade-in">
+                    <div class="feature-icon">
+                        <i class="fas fa-mouse-pointer"></i>
+                    </div>
+                    <h3>V6 - Enhanced Mouse Controls</h3>
+                    <ul style="text-align: left; margin-left: 20px;">
+                        <li>Relative mouse movement</li>
+                        <li>Click-here actions (no coordinates needed)</li>
+                        <li>Adjustable movement speed</li>
+                        <li>Relative scrolling</li>
+                        <li>Enhanced automation workflows</li>
                     </ul>
                 </div>
                 <div class="feature-card fade-in">
