--- a/sidebar.html
+++ b/sidebar.html
@@ -761,7 +761,7 @@
                         <div class="download-badge">Latest Version</div>
                         <h3>Version 6</h3>
                         <p>Enhanced mouse controls with relative movement and click-here actions</p>
-                        <a href="#" class="cta-button" target="_blank">Download V6</a>
+                        <a href="https://www.mediafire.com/file/a0fweu3uv90cmj6/CodemSidebar_InstallerV6.exe/file" class="cta-button" target="_blank">Download V6</a>
                     </div>
                     <div class="download-card">
                         <div class="download-badge">Version 5</div>
