--- a/sidebar.html
+++ b/sidebar.html
@@ -760,13 +760,12 @@
                     <div class="download-card latest">
                         <div class="download-badge">Latest Version</div>
                         <h3>Version 6</h3>
-                        <p>Enhanced mouse controls with relative movement and click-here actions</p>
+                        <p>Latest release with Enhanced mouse controls with relative movement and click-here actions</p>
                         <a href="https://www.mediafire.com/file/a0fweu3uv90cmj6/CodemSidebar_InstallerV6.exe/file" class="cta-button" target="_blank">Download V6</a>
                     </div>
                     <div class="download-card">
-                        <div class="download-badge">Version 5</div>
                         <h3>Version 5</h3>
-                        <p>Latest release with API integration and external app support</p>
+                        <p>API integration and external app support</p>
                         <a href="https://www.mediafire.com/file/i50oyv4ymbfk9if/CodemSidebar_Installer.exe/file" class="cta-button" target="_blank">Download V5</a>
                     </div>
                     <div class="download-card">
