--- a/index.html
+++ b/index.html
@@ -507,6 +507,18 @@
           <a href="https://alchemy-jade.vercel.app" target="_blank">alchemy-jade.vercel.app</a>
         </div>
       </div>
+
+      <!-- NEW: Emoji Search Project -->
+      <div class="project-card">
+          <div class="project-image-container" onclick="openModal('Emoji.png', 'Emoji Search')">
+              <img src="Emoji.png" alt="Emoji Search">
+          </div>
+          <h5>Emoji Search</h5>
+          <p>A comprehensive emoji search tool for developers and content creators. Find and copy the perfect emojis directly to your clipboard.</p>
+          <div class="project-links">
+              <a href="https://emojisearch-mu.vercel.app" target="_blank">emojisearch-mu.vercel.app</a>
+          </div>
+      </div>
       
       <!-- Codem Sidebar Project with Version Dropdown -->
       <div class="project-card">
@@ -516,7 +528,7 @@
           <h5>Codem Sidebar</h5>
           <p>A side assistant to keep on your screen that controls your cursor and performs tasks set by the user. V1 is the basic version, V2 Adds a searchbar and Profiles, V3 Adds Gradients stretch, V4 removes the ctrl and shift delay bug, V5 adds API support and external integration capabilities, V6 adds enhanced mouse controls (relative movement, click-here actions, adjustable speed).</p>
           
-          <!-- Version Dropdown - Updated with V6 -->
+          <!-- Version Dropdown - Updated with V7 -->
           <div class="version-dropdown">
               <select id="sidebarVersion">
                   <option value="https://www.mediafire.com/file/hszu3i4p6oz4i59/sidebar_app.exe/file">Version 1</option>
@@ -524,7 +536,8 @@
                   <option value="https://www.mediafire.com/file/kiblf5b8nn7ows6/sidebar_app.zip/file">Version 3</option>
                   <option value="https://www.mediafire.com/file/uqqdun64yuygn2e/sidebar_app.exe/file">Version 4</option>
                   <option value="https://www.mediafire.com/file/i50oyv4ymbfk9if/CodemSidebar_Installer.exe/file">Version 5</option>
-                  <option value="https://www.mediafire.com/file/a0fweu3uv90cmj6/CodemSidebar_InstallerV6.exe/file">Version 6 (Latest)</option>
+                  <option value="https://www.mediafire.com/file/a0fweu3uv90cmj6/CodemSidebar_InstallerV6.exe/file">Version 6</option>
+                  <option value="https://www.mediafire.com/file/j6sdscafhjdmvxr/CodemSidebar_InstallerV7.exe/file">Version 7 (Latest)</option>
               </select>
               <button onclick="downloadSelectedVersion()">Download Selected Version</button>
               <a href="sidebar.html" target="_blank" class="website-btn">Visit Website</a>
