--- a/sidebar.html
+++ b/sidebar.html
@@ -1455,7 +1455,7 @@ print(response)</code>
                 </div>
             </div>
             <div class="copyright">
-                <p>MIT License — free to use, modify, and distribute. © 2025 Codem Tools</p>
+                <p>MIT License — free to use and distribute. © 2025 Codem Tools</p>
             </div>
         </div>
     </footer>
