--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
           <img src="Ytdwn.png" alt="Codem's Convertor">
         </div>
         <h5>Codem's Convertor</h5>
-        <p>An epic tool to convert your Music and vids over from yt. With the addition of an in app music tester. You'll need ffmpeg - grab it straight from the link in settings or download from https://www.ffmpeg.org/download.html. V1=Music Player/Downloader, V2=Loops/Spins, V3=Playlists/Thumbnails, V4=Local API, Port Management & App Manipulation.</p>
+        <p>An epic tool to convert your Music and vids over from yt. With the addition of an in app music tester. You'll need ffmpeg - grab it straight from the link in settings or download from https://www.ffmpeg.org/download.html. V1=Music Player/Downloader, V2=Loops/Spins, V3=Playlists/Thumbnails, V4=Local API, Port Management & App Manipulation, V5=Auto Updated Module added to fix crashing & Auto download updates.</p>
         
         <div class="project-links">
              <a href="https://github.com/codemdragon/Codem-Convertor-MusicPlayer.git" target="_blank">GitHub Repository</a>
@@ -592,7 +592,8 @@
             <option value="http://www.mediafire.com/file/0qtet8h4v39hlkn/Codem%27s_Convertor.zip">Version 1</option>
             <option value="https://www.mediafire.com/file/4fi59ty63anx2ub/Codem's+ConvertorV2.zip/file">Version 2</option>
             <option value="https://www.mediafire.com/file/ihcu7sghlz7omy8/CodemMusicPlayerV3.zip/file">Version 3</option>
-            <option value="https://www.mediafire.com/file/or9s49h4cc4gcjs/CodemMusicPlayerV4.zip/file">Version 4 (Latest)</option>
+            <option value="https://www.mediafire.com/file/or9s49h4cc4gcjs/CodemMusicPlayerV4.zip/file">Version 4</option>
+            <option value="https://www.mediafire.com/file/u0ypqzduvn0u936/CodemMusicPlayerV5.zip/file">Version 5 (Latest)</option>
           </select>
           <button onclick="downloadSelectedConvertorVersion()">Download Selected Version</button>
         </div>
